--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "@prisma/client": "^6.12.0",
+    "@uploadcare/upload-client": "^6.17.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
+    "form-data": "^4.0.4",
     "hapi-auth-jwt2": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
+    "uploadcare-widget": "^3.23.2",
     "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
