--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
+    "firebase-admin": "^13.4.0",
     "form-data": "^4.0.4",
     "hapi-auth-jwt2": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
