--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "postinstall": "npx prisma generate",
-    "migrate:deploy": "npx prisma migrate deploy"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+
+    
+
   },
+  
   "author": "",
   "license": "ISC",
   "description": "",
