--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "form-data": "^4.0.4",
     "hapi-auth-jwt2": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.9",
     "socket.io": "^4.8.1",
     "uploadcare-widget": "^3.23.2",
     "uuid": "^11.1.0",
