--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uploadcare/upload-client": "^6.17.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
     "firebase-admin": "^13.4.0",
@@ -28,6 +29,7 @@
     "hapi-auth-jwt2": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.9",
+    "redis": "^5.8.3",
     "socket.io": "^4.8.1",
     "uploadcare-widget": "^3.23.2",
     "uuid": "^11.1.0",
