--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
     "@prisma/client": "^6.14.0",
+    "@sendgrid/mail": "^8.1.6",
     "@uploadcare/upload-client": "^6.17.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
